# my-mtproto-vds-instance

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.local.yaml  docker-compose.yaml  entrypoint.sh  pyproject.toml  requirements.txt  telemt.template.toml  telemt.toml  test.py
deploy/: TELEMT-SYN-LIMIT.md  inventory.example.ini  inventory.ini  playbook-dev.yml  playbook-prod.yml  playbook.yml  ssh-hardening-dev.yml  ssh-hardening-prod.yml  telemt-syn-limit-prod.yml  telemt-syn-limit-rollback.yml  telemt-syn-limit.yml
deploy/tests/: test_ssh_hardening.py  test_telemt_syn_limit.py
docs/: ARCHITECTURE.md  BUSINESS.md  CONTRACTS.md  DEPLOY.md  TELEMT.md
docs/superpowers/plans/: 2026-06-09-remove-toml-from-api.md
src/: app.py  config.py  exceptions.py
src/api/routes/: __init__.py  add_user.py  users.py
src/api/schemas/: __init__.py  add_new_user_schema.py  get_user_schema.py
src/services/: __init__.py  add_user_service.py  get_user_service.py  remove_user_service.py  rotate_secret_service.py
src/services/v1/: __init__.py  add_user_service.py  remove_user_service.py
src/services/v2/: __init__.py  add_user_service.py  remove_user_service.py
src/tests/: conftest.py  test_add_user_view.py  test_remove_user_view.py
src/tests/e2e/: conftest.py  test_users.py
src/tests/unit/: conftest.py  test_add_user_view.py  test_get_user_view.py  test_remove_user_view.py  test_rotate_secret_view.py
src/tests/v1/: conftest.py  test_add_user_view.py  test_remove_user_view.py  utils.py
src/tests/v2/: conftest.py  (+1 more)
telemt/: telemt.example.toml
(+14 files in other folders)
