[project]
name = "my-mtproto-vds-instance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.131.0",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.22",
    "toml>=0.10.2",
    "uvicorn>=0.41.0",
]
